# Tickeys

./: .editorconfig  Cargo.toml  LICENSE  README.md  Tickeys new.icns  Tickeys.sublime-project  Tickeys.sublime-workspace  build-product.sh  build.rs  changelog.md
Resources/: Settings.nib
Resources/data/: schemes.json
Resources/data/mechanical/: license.txt
SharedSupport/: libalut.0.dylib  libssl.1.0.0.dylib
Tickeys.app/Contents/: Info.plist
Tickeys.app/Contents/MacOS/: Tickeys
Tickeys.app/Contents/Resources/: tickeys.icns
Tickeys.app/Contents/Resources/Base.lproj/: Localizable.strings  Settings.nib
Tickeys.app/Contents/Resources/data/: schemes.json
Tickeys.app/Contents/Resources/zh-Hans.lproj/: Localizable.strings  Settings.nib
Tickeys.app/Contents/_CodeSignature/: CodeResources
assets/: n.psd
assetsTickeysGUI/TickeysGUI/zh-Hans.lproj/: Localizable.strings  Settings.xib
assets/TickeysGUI/TickeysGUI/: AppDelegate.h  AppDelegate.m  Info.plist  Settings.xib  SettingsController.h  SettingsController.m  SettingsDelegate.h  SettingsDelegate.m  main.m
assets/TickeysGUI/TickeysGUI.xcodeproj/: project.pbxproj
assets/TickeysGUI/TickeysGUI.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
assets/TickeysGUI/TickeysGUI/Base.lproj/: Localizable.strings  (+3 more)
assets/TickeysGUI/TickeysGUITests/: Info.plist  TickeysGUITests.m
data/: app_config.toml  schemes.json  user_options.default.toml
src/: alut.rs  cocoa_ext.rs  cocoa_util.rs  consts.rs  core_foundation.rs  core_graphics.rs  event_tap.rs  main.rs  pref.rs  settings_ui.rs  tickeys.rs
(+10 files in other folders)
